sftp: Add support for setting timestamps

Implement set time::modified and time::access in function
try_set_attribute. The SFTP protocol limitation that atime and
mtime must be set simultaneously is overcome by stating the
file and perform a read-modify-write operation. Therefore the
new callback function set_attribute_stat_reply is added.
Furthermore time::modifed and time::access are added to
try_query_settable_attributes.

This patch makes 'rsync -t' and 'touch' utilities
work over gvfsd-sftp.

https://bugzilla.gnome.org/show_bug.cgi?id=527339